# ak_sw_benchmarker

./: .gitignore  HISTORY.md  README.md  TODO.txt  activate.bat  ak_simulator_start.bat  ak_simulator_start.sh  ak_sw_benchmarker_start.bat  ak_sw_benchmarker_start.sh  build_pip.bat  creating_env_ak_simulator.sh  creating_env_ak_sw_benchmarker.sh  requirements_u20.04.txt  requirements_windows.txt  setup.cfg  setup_01.cfg
data/KA_Story_RGB_IR_DEPTH_hour_5f_mask/preprocessed_data/: README.txt.txt
data/csv_datasets/: CALIBRATION_SPHERES_depth_v1.csv  fruit_0136_EAST_SIDE_STATIC_VI_v2.csv
data/csv_datasets/MODIFICACION/: fruit_measures_ALL_TREES_01-12_comma_id_v1.csv
docs/: HEADER_CODE.txt  USER_MANUAL_ak_sm_benchmarker_v1.md  USER_MANUAL_ak_sw_benchmarker_v1.md
src/: ak_simulator_main.py  ak_sw_benchmarker_main.py
src/ak_simulator/: __main__.py  temporal.py
src/ak_simulator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/ak_sw_benchmarker/: __main__.py
src/camera_management_s/: camera_parameters.py  camera_parameters_selector.py
src/camera_management_s/test/: test_camera_parameters.py
src/data_features_processor/: data_features_config.py  features_extraction.py
src/dataset_management/: dataset_config.py  dataset_manager.py  filename_decoder.py  pascal_voc_parser.py
src/depth_estimation_s/: depth_estimation_methods.py  depth_estimation_methods_selector.py
src/gui_benchmarking/: about_benchmarking_window.py  gui_benchmarking_config.py  gui_tab_window.py  help_benchmarking_window.py
src/gui_simulation/: about_simulation_window.py  gui_simulation_config.py  gui_tab_window.py  help_simulation_window.py
src/helpers/: helper_filesystem.py
src/reports_management/: comparative_measures_reports.py  comparative_measures_reports_selector.py  integration_datasheet_metrics.py  integration_detail_metrics.py  metrics_calculations.py  prediction_metrics_framework.py  prediction_metrics_framework_config.py
src/screen_layout_s/: draw_screen_helpers.py
src/size_estimation_s/: image_processing.py  roi_selector.py  shape_fitting_methods.py  size_estimation_methods.py  size_estimation_methods_selector.py
src/test/: test_suite_ak_size_estimation.py
tools/: README.md
tools/calibration_codes/: ka_examples.cpp
tools/matlab_examples/: plot3dDepthSpecial.m  template_segmented_figures.m  test_NDI_index.m  test_depth_heatmap_data_load.m  test_depth_threshold_segmentation.m
(+700 files in other folders)
