[metadata]
name = ak_simulator
version = 0.0.9
author = Juan Carlos Miranda, Jaume Arno, Jordi Gene-Mola, Spyros Fountas, Eduard Gregorio
author_email = juancarlos.miranda@udl.cat, jaume.arno@udl.cat, jordi.genemola@udl.cat, sfountas@aua.gr, eduard.gregorio@udl.cat
description = AK_SIMULATOR that makes it possible to apply different sizing algorithms and allometric yield prediction models to manually labeled color and depth tree images.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/GRAP-UdL-AT/ak_simulator
project_urls =
    Bug Tracker = https://github.com/GRAP-UdL-AT/ak_simulator/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    pip==23.2.1
    bleach==6.0.0
    build==0.10.0
    certifi==2022.12.7
    charset-normalizer==3.0.1
    colorama==0.4.6
    contourpy==1.1.0
    cycler==0.11.0
    docutils==0.19
    fonttools==4.40.0
    idna==3.4
    importlib-metadata==6.0.0
    importlib-resources==5.12.0
    jaraco.classes==3.2.3
    joblib==1.2.0
    keyring==23.13.1
    kiwisolver==1.4.4
    lxml==4.9.2
    markdown-it-py==2.2.0
    matplotlib==3.7.2
    mdurl==0.1.2
    more-itertools==9.1.0
    numpy==1.24.2
    opencv-python==4.7.0.68
    packaging==23.0
    pandas==1.5.3
    path==16.6.0
    Pillow==9.4.0
    pkginfo==1.9.6
    Pygments==2.14.0
    pyk4a==1.5.0
    pyparsing==3.0.9
    pyproject_hooks==1.0.0
    python-dateutil==2.8.2
    python-version==0.0.2
    pytz==2022.7.1
    pywin32-ctypes==0.2.0
    readme-renderer==37.3
    requests==2.28.2
    requests-toolbelt==0.10.1
    rfc3986==2.0.0
    rich==13.3.1
    scikit-learn==1.2.1
    scipy==1.10.1
    six==1.16.0
    threadpoolctl==3.1.0
    tomli==2.0.1
    twine==4.0.2
    typing_extensions==4.5.0
    urllib3==1.26.14
    webencodings==0.5.1
    zipp==3.14.0

[options.packages.find]
where = src

[options.package_data]
# If any package or subpackage contains *.txt or *.rst files, include them:
* = *.txt, *.rst, *.md
# Include any *.dat files found in the "data" subdirectory of the "ak_simulator"
# package:
ak_simulator = ak_simulator/conf/*.conf
gui_simulation = assets/*.png
